add secure protect queue route
